@@ -507,12 +507,29 @@ static void status_service(Service_T S, StringBuffer_T B, int V) {
                                             "<avg05>%.2f</avg05>"
                                             "<avg15>%.2f</avg15>"
                                             "</load>"
-                                            "<cpu>"
-                                            "<user>%.1f</user>"
-                                            "<system>%.1f</system>"
-#ifdef HAVE_CPU_WAIT
-                                            "<wait>%.1f</wait>"
-#endif
+                                            "<cpu>",
+                                            systeminfo.loadavg[0],
+                                            systeminfo.loadavg[1],
+                                            systeminfo.loadavg[2]);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_User)
+                                StringBuffer_append(B, "<user>%.1f</user>", systeminfo.cpu.usage.user > 0. ? systeminfo.cpu.usage.user : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_System)
+                                StringBuffer_append(B, "<system>%.1f</system>", systeminfo.cpu.usage.system > 0. ? systeminfo.cpu.usage.system : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_Nice)
+                                StringBuffer_append(B, "<nice>%.1f</nice>", systeminfo.cpu.usage.nice > 0. ? systeminfo.cpu.usage.nice : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_IOWait)
+                                StringBuffer_append(B, "<wait>%.1f</wait>", systeminfo.cpu.usage.iowait > 0. ? systeminfo.cpu.usage.iowait : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_HardIRQ)
+                                StringBuffer_append(B, "<hardirq>%.1f</hardirq>", systeminfo.cpu.usage.hardirq > 0. ? systeminfo.cpu.usage.hardirq : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_SoftIRQ)
+                                StringBuffer_append(B, "<softirq>%.1f</softirq>", systeminfo.cpu.usage.softirq > 0. ? systeminfo.cpu.usage.softirq : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_Steal)
+                                StringBuffer_append(B, "<steal>%.1f</steal>", systeminfo.cpu.usage.steal > 0. ? systeminfo.cpu.usage.steal : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_Guest)
+                                StringBuffer_append(B, "<guest>%.1f</guest>", systeminfo.cpu.usage.guest > 0. ? systeminfo.cpu.usage.guest : 0.);
+                        if (systeminfo.cpu.usage.statisticsAvailable & CpuMonitoring_GuestNice)
+                                StringBuffer_append(B, "<guestnice>%.1f</guestnice>", systeminfo.cpu.usage.guest_nice > 0. ? systeminfo.cpu.usage.guest_nice : 0.);
+                        StringBuffer_append(B,
                                             "</cpu>"
                                             "<memory>"
                                             "<percent>%.1f</percent>"
@@ -523,14 +540,6 @@ static void status_service(Service_T S, StringBuffer_T B, int V) {
                                             "<kilobyte>%llu</kilobyte>"
                                             "</swap>"
                                             "</system>",
-                                            systeminfo.loadavg[0],
-                                            systeminfo.loadavg[1],
-                                            systeminfo.loadavg[2],
-                                            systeminfo.cpu.usage.user > 0. ? systeminfo.cpu.usage.user : 0.,
-                                            systeminfo.cpu.usage.system > 0. ? systeminfo.cpu.usage.system : 0.,
-#ifdef HAVE_CPU_WAIT
-                                            systeminfo.cpu.usage.iowait > 0. ? systeminfo.cpu.usage.iowait : 0.,
-#endif
                                             systeminfo.memory.usage.percent,
                                             (unsigned long long)((double)systeminfo.memory.usage.bytes / 1024.),               // Send as kB for backward compatibility
                                             systeminfo.swap.usage.percent,
